# nikobus-connect

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
nikobus_connect/: command.py  const.py  listener.py
nikobus_connect/discovery/: __init__.py  base.py  chunk_decoder.py  dimmer_decoder.py  discovery.py  fileio.py  mapping.py  pc_link_decoder.py  pc_logic_decoder.py  pc_record_parser.py  protocol.py  shutter_decoder.py  switch_decoder.py
tests/: test_8ch_alias_merge.py  test_button_schema_migration.py  test_button_storage_adapter.py  test_chunk_buffering.py  test_discovery_progress.py  test_find_operation_point.py  test_inventory_guard.py  test_ir_virtual_op_points.py  test_module_storage_adapter.py  test_module_type_priority.py  test_paired_button_inference.py  test_pc_link_inventory_terminator.py  test_pc_link_signature_filter.py  test_pc_link_stage2.py  test_pc_link_stage2b.py  test_pc_logic_stage1.py  test_pc_record_parser.py  test_register_scan_range.py  test_sequential_register_scan.py  test_stale_inventory_detection.py  test_unknown_device_dedup.py
