[build-system]
requires = ["setuptools>=68.0,<75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nikobus-connect"
version = "0.3.4"
description = "Asynchronous library for Nikobus home automation with device discovery"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pyserial-asyncio>=0.5",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.21"]

[project.urls]
Repository = "https://github.com/fdebrus/nikobus-connect"

[tool.setuptools.packages.find]
include = ["nikobus_connect*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
